feat(attach): classify common attach/inspection refusals; honest handling
Detect and classify common live-attach refusal / reduced-coverage
situations in the opt-in process-attach path, tell the user the honest
next step (restart under startup -agentpath), and never report success
when the attach did not happen. No stealth, no bypass, no patching of
target checks.

attach_support.py:
- Pre-attach cmdline scan (scan_cmdline_for_refusals) over
  /proc/<pid>/cmdline: -XX:+DisableAttachMechanism,
  -XX:-EnableDynamicAgentLoading, -Djdk.attach.allowAttachSelf=false.
- Post-failure classifier (classify_attach_error) mapping jcmd /
  VirtualMachine output to stable reason codes: attach-disabled,
  dynamic-agent-disabled, allow-attach-self-disabled, cross-user,
  not-a-jvm, agent-onattach-missing, agent-init-failed,
  jcmd-false-success, unknown (with truncated raw snippet).

main.py attach CLI:
- Refuse pre-attach when the cmdline scan matches, before invoking jcmd.
- Classify jcmd and VirtualMachine failures; print reason + startup-path
  recommendation; exit non-zero; never print 'attached (preview)'.
- Keep --i-own-this-process, same-user refusal, default recover startup
  path unchanged. Reduced coverage stays an honest success plus a
  one-line startup-path reminder.

docs/jvm-attach.md: add 'common refusals and what this tool does' table.
tests: unit tests for cmdline detection + error classification (no JVM);
existing attach tests kept green.

Co-authored-by: Gao Yu <gaoyu06@users.noreply.github.com>